<resources>
    <string name="app_name">Kazdoura</string>
    <string name="facebook_app_id">591332631347472</string>
    <string name="fb_login_protocol_scheme">fb591332631347472</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_across_lebanon">Search Across Lebanon</string>
    <string name="bakeries">Bakeries</string>
    <string name="libraries">Libraries</string>
    <string name="musical_stores">Musical\nStores</string>
    <string name="cafes">Cafes</string>
    <string name="sweets">Sweets</string>
    <string name="lounges">Lounges</string>
    <string name="snacks">Snacks</string>
    <string name="entertainment">Entertainment</string>
    <string name="only_show">Only show:</string>
    <string name="food">Food</string>
    <string name="arts_and_books">Arts and Books</string>
    <string name="list">List</string>
    <string name="fun_parks">Fun Parks</string>
    <string name="sign_up_using_email">Sign up using email:</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="if_you_already_have_an_account_">If you already have an account, just enter your Email and Password and click sign in</string>
    <string name="juices">Juices</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="liquor">Liquor</string>
    <string name="beach_resorts">Beach Resorts</string>
    <string name="pubs">Pubs</string>
    <string name="night_clubs">Night Clubs</string>
    <string name="music_studios">Music\nStudios</string>
    <string name="photography_studios">Photography\nStudios</string>
    <string name="art_galleries">Art\nGalleries</string>
    <string name="sea_food">Sea Food</string>
    <string name="fashion">Fashion</string>
    <string name="men_s">Men\'s</string>
    <string name="women_s">Women\'s</string>
    <string name="babies">Babies</string>
    <string name="shoes">Shoes</string>
    <string name="jewellery">Jewellery</string>
    <string name="accessories">Accessories</string>
    <string name="perfumes">Perfumes</string>
    <string name="watches">Watches</string>
    <string name="electronics">Electronics</string>
    <string name="phones">Phones</string>
    <string name="computers">Computers</string>
    <string name="consumer_s_electroncis">Consumer\'s</string>
    <string name="dvd_shops">DVD Shops</string>
    <string name="health_beauty">Health and Beauty</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="gyms">Gyms</string>
    <string name="tattoo_shops">Tattoo\nShops</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="optimetrics">Optometrists</string>
    <string name="spas">Spas</string>
    <string name="vehicles">Vehicles</string>
    <string name="cars">Cars</string>
    <string name="motorcycles">Motorcycles</string>
    <string name="repair_services">Repair\nServices</string>
    <string name="stations">Stations</string>
    <string name="rental">Rental</string>
    <string name="barbers">Barbers</string>
    <string name="animals">Animals</string>
    <string name="pet_stores">Pet Stores</string>
    <string name="vets">Vets</string>
    <string name="zoos">Zoos</string>
    <string name="retail">Retail</string>
    <string name="groceries">Groceries</string>
    <string name="super_markets">Super\nMarkets</string>
    <string name="_1_shops">1$ Shops</string>
    <string name="parking_lots">Parking\nLots</string>
    <string name="store_owner">Store Owner</string>
    <string name="i_ll_sign_in_later">I\'ll Sign in later</string>
    <string name="beautiful_sein_s_profile_3"><![CDATA[Beautiful Sein\'s profile <3]]></string>
    <string name="around">Around</string>
    <string name="cities">Cities</string>
    <string name="categories">Categories</string>
    <string name="kazdoura">Kazdoura</string>
    <string name="profile">Profile</string>
    <string name="browse">Browse</string>
    <string name="explore">Explore</string>
    <string name="find">Find</string>
    <string name="bars">Bars</string>
    <string name="clothing">Clothing</string>
    <string name="home_appliances">Home\nAppliances</string>
    <string name="clubs">Clubs</string>
    <string name="optometrists">Optometrists</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="you_re_not_signed_in_yet">You\'re not signed in yet</string>
    <string name="sign_me_up">Sign me up</string>
    <string name="Later">Later</string>
    <string name="add_my_store">Add My Store</string>
    <string name="sign_in_with_facebook_or_with_your_phone_number">Sign in using Facebook, Email, or your Phone number</string>
    <string name="inside_hint_phone_number"> 70 123 456</string>
    <string name="verify">Verify</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_the_pin_you_received_via_sms_on">Enter the pin you received via Sms:</string>
    <string name="resend_code">Resend Code</string>
    <string name="edit_number">Edit number</string>
    <string name="can_i_have_your_mobile_number_please">Can I have your mobile number please?</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="store_details">Store Details</string>
    <string name="enter_the_store_name">Enter the store name</string>
    <string name="add_location">Add Location</string>
    <string name="enter_the_front_description_slogan">Enter the front description \‘slogan\’</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="search">Search</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="filter">Filter</string>
    <string name="restaurants">Restaurants</string>
    <string name="Resorts">Resorts</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>

    <string name="facebook">Facebook</string>
    <string name="phone">Phone</string>
    <string name="skip">Skip</string>
    <string name="looking_for">Looking for</string>
    <string name="what_are_you_looking_for">What Are You Looking For?</string>
    <string name="map">Map</string>
    <string name="welcome_to_kazdoura">Welcome to Kazdoura.</string>
    <string name="help_us_find">Help Us Find You All the Stores Around You</string>
    <string name="search_location">Search Location</string>
    <string name="select_curren_location">Use Current Location</string>
    <string name="manually_select_location">Manually Select Location</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="change_location">Change Location</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="default_text">default text</string>
    <string name="map_view">Map View</string>
    <string name="sort_by">Sort By</string>

    <string name="locate">Locate</string>
</resources>
