<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textview.MaterialTextView
                style="@style/ph5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans_condensed"
                android:text="@string/store_details" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/storeDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans_condensed"
                android:hint="@string/enter_the_store_name" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/storeName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-@font/fira_sans_condensed-light"
                android:hint="@string/enter_the_front_description_slogan" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/fira_sans_condensed"
            android:text="@string/add_location" />


        <org.angmarch.views.NiceSpinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:fontFamily="@font/fira_sans_condensed"
            android:layout_margin="16dp"
            android:textSize="30sp"
            app:arrowTint="@color/colorPrimary"
            app:hideArrow="false"
            app:textTint="#000000"
            />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:enabled="false"
            android:textSize="30sp"
            android:fontFamily="@font/fira_sans_condensed"
            android:layout_margin="16dp"
            app:arrowTint="@color/colorPrimary"
            app:hideArrow="false"
            app:textTint="#000000"
            />


    </LinearLayout>
</ScrollView>
