<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="36dp"
    tools:context=".LocationBottomSheetFragment">


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/ph6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/search_location"
        android:textColor="@color/textColor" />

    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:defaultQueryHint="Try Jbeil"
        android:layout_marginEnd="30dp"
        android:background="@drawable/actual_search_box"
        android:elevation="1dp" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/pb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/useCurrentLocation"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:drawableStart="@drawable/tracker"
        android:clickable="true"
        android:drawablePadding="4dp"
        android:text="@string/select_curren_location"
        android:textColor="@color/colorPrimary" />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/pb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:id="@+id/manuallySelectLocation"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:drawableStart="@drawable/manually_select_location"
        android:drawablePadding="4dp"
        android:text="@string/manually_select_location"
        android:textColor="@color/colorPrimary" />



</LinearLayout>