<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Czynt.kazdoura.Login.EmailAuth.EmailLogin">




    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="10dp"
        android:scaleType="centerInside"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loader"
        app:lottie_speed="1.5" />



   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/contentLayout"
       android:visibility="visible">


    <com.google.android.material.textview.MaterialTextView
                style="@style/ph5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signUpHeader"
                android:fontFamily="@font/fira_sans_condensed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="36dp"
                android:layout_marginStart="10dp"
                android:text="@string/sign_up_using_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userNameLayout"
            app:layout_constraintTop_toBottomOf="@id/signUpHeader"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundColor="#ffffff"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxStrokeColor="@color/colorSecondary"
            app:startIconDrawable="@drawable/username"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:fontFamily="@font/fira_sans_condensed"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/userNameLayout"
            android:id="@+id/emailLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundColor="#ffffff"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxStrokeColor="@color/colorSecondary"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans_condensed"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:boxBackgroundColor="#ffffff"
            app:errorTextColor="@color/error"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxStrokeColor="@color/colorSecondary"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/fira_sans_condensed"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textview.MaterialTextView
                style="@style/sb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hint"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:text="@string/if_you_already_have_an_account_"
                android:textColor="@color/textColor" />




        <com.google.android.material.button.MaterialButton
            android:id="@+id/bSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hint"
            android:nextFocusUp="@id/signUpHeader"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/fira_sans_condensed"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:enabled="false"
            android:text="@string/sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_condensed"
        android:nextFocusUp="@id/signUpHeader"
        app:layout_constraintTop_toBottomOf="@id/bSignUp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:enabled="false"
        android:text="@string/sign_in" />
   </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

